# NexusAI

./: Cargo.toml  README.md
src/: README.md  main.rs  ws_handler.rs
src/api/: mod.rs
