[package]
name = "rust-ws-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenv = "0.15" # To easily load API key from .env file